<resources>
    <string name="app_name">MTG News</string>
    <string name="share_using">Share Using</string>
    <string name="unreleased_sets">New sets:</string>
    <string name="new_sets">Sets:</string>
    <string name="article_image">Article image</string>
    <string name="loading_news">Loading news, this may take some time</string>
    <string name="title_activity_settings">Settings</string>
    <string name="theme_settings">Theme Settings</string>
    <string name="news_settings">News Settings</string>
    <string name="change_colour">Change</string>
    <string name="primary_colour">Primary Colour</string>
    <string name="accent_colour">Accent Colour</string>
    <string name="big_image">Big Image</string>
    <string name="small_image">Small Image</string>
    <string name="set_previews">Set Previews</string>
    <string name="daily_mtg">Daily MTG</string>
    <string name="news_sources">News Sources</string>
    <string name="save_settings">Save Settings</string>
    <string name="news_card_image_size">News Card Image Size</string>
    <string name="third_party_libraries">Third Party Libraries</string>
    <string name="restore_default">Restore Default</string>
    <string name="EDHREC">EDHREC</string>
    <string name="mtg_goldfish">MTG Goldfish</string>
    <string name="view_library">View Library</string>
    <string name="invalidate_cache">Invalidate Cache</string>
    <string name="update_period">Update Period (Hours)</string>
    <string name="force_night">Force Dark Mode</string>
    <string name="hours_to_update">Hours to update</string>
    <string name="enable_news_background_refresh">Enable Background Refresh</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Card Name or Oracle Text</string>
    <string name="sort_by">Sort By</string>
    <string name="colour">Colour</string>
    <string name="super_type">Super Type</string>
    <string name="card_image">Card Image</string>
    <string name="card_name_place_holder">Card Name Place Holder</string>
    <string name="oracle_text_place_holder">Oracle Text Place Holder</string>
    <string name="ascending_order">Ascending Order</string>
    <string name="view_card">View Card</string>
    <string name="scroll_to_top_of_page">Scroll to top of page</string>
    <string name="manamoji">Manamoji</string>
    <string name="s">New Sets:</string>
    <string name="sets">Sets:</string>
    <string name="hipsters_of_the_coast">Hipsters of the Coast</string>
</resources>
